force-app/main/default/objects/Order__c/fields/Closure_Code__c.field-meta.xml
<CustomField>
    <fullName>Closure_Code__c</fullName>
    <label>Closure Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>test</fullName>
            </value>
            <value>
                <fullName>SLA not met -Level 3 Warehouse</fullName>
            </value>
            <value>
                <fullName>SLA not met -Spares in Wrong Place○</fullName>
            </value>
            <value>
                <fullName>SLA not met -Reorder Before Replenishment</fullName>
            </value>
            <value>
                <fullName>SLA not met -No Deployed Data</fullName>
            </value>
            <value>
                <fullName>Met SLA</fullName>
            </value>
            <value>
                <fullName>Met SLA -Delivered As Requested</fullName>
            </value>
            <value>
                <fullName>EU</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>SLA not met -Double Order</fullName>
            </value>
            <value>
                <fullName>SLA not met -Courier/3rd party logistics issue</fullName>
            </value>
            <value>
                <fullName>SLA not met -Weather</fullName>
            </value>
            <value>
                <fullName>SLA not met -Ordered Incorrectly</fullName>
            </value>
            <value>
                <fullName>SLA not met -Tech not available</fullName>
            </value>
            <value>
                <fullName>SLA not met -Centrally Spared</fullName>
            </value>
            <value>
                <fullName>SLA not met -Spares Gap</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>