force-app/main/default/objects/Order__c/fields/Days_At_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Days_At_Vendor__c</fullName>
    <formula>Today() -  Received_By_Vendor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days At Vendor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>