force-app/main/default/objects/Order__c/fields/Detail_Number__c.field-meta.xml
<CustomField>
    <fullName>Detail_Number__c</fullName>
    <formula>&quot;orderNo-&quot;+TEXT(Line_Number__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Detail Number</label>
    <type>Text</type>
</CustomField>