force-app/main/default/objects/Order__c/fields/Manufacturing_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Manufacturing_Part_Number__c</fullName>
    <label>Manufacturing Part Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>