force-app/main/default/objects/Order__c/fields/Open_QTY__c.field-meta.xml
<CustomField>
    <fullName>Open_QTY__c</fullName>
    <label>Open QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>