force-app/main/default/objects/Order__c/fields/Order_Priority__c.field-meta.xml
<CustomField>
    <fullName>Order_Priority__c</fullName>
    <label>Order Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ship Ground</fullName>
            </value>
            <value>
                <fullName>Next Day or Later</fullName>
            </value>
            <value>
                <fullName>Same Day Counter to</fullName>
            </value>
            <value>
                <fullName>Same Day DtD</fullName>
            </value>
            <value>
                <fullName>Same Day DtD next AM</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>UPS ground</fullName>
            </value>
            <value>
                <fullName>Ship Overnight</fullName>
                <isActive>false</isActive>
                <label>Ship Overnight</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>