force-app/main/default/objects/Order__c/fields/Original_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Original_Part_Number__c</fullName>
    <label>Original Part Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>