force-app/main/default/objects/Order__c/fields/Parent_Item__c.field-meta.xml
<CustomField>
    <fullName>Parent_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Item</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Cannot have Non Primary Item as Parent Item</errorMessage>
        <filterItems>
            <field>Item__c.Primary__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Item__c</referenceTo>
    <relationshipLabel>Orders (Parent Item)</relationshipLabel>
    <relationshipName>Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>