force-app/main/default/objects/Order__c/fields/Part_Owner__c.field-meta.xml
<CustomField>
    <fullName>Part_Owner__c</fullName>
    <label>Owner</label>
    <length>2</length>
    <type>Text</type>
</CustomField>