force-app/main/default/objects/Order__c/fields/Part_Request_Number__c.field-meta.xml
<CustomField>
    <fullName>Part_Request_Number__c</fullName>
    <label>Part Request Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>