force-app/main/default/objects/Order__c/fields/POD__c.field-meta.xml
<CustomField>
    <fullName>POD__c</fullName>
    <label>POD</label>
    <length>100</length>
    <type>Text</type>
</CustomField>