force-app/main/default/objects/Order__c/fields/Received_By_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Received_By_Vendor__c</fullName>
    <label>Received By Vendor</label>
    <type>Date</type>
</CustomField>