force-app/main/default/objects/Order__c/fields/Replacement_Ref__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Ref__c</fullName>
    <label>Replacement Ref</label>
    <length>100</length>
    <type>Text</type>
</CustomField>