force-app/main/default/objects/Order__c/fields/Requsted_QTY__c.field-meta.xml
<CustomField>
    <fullName>Requsted_QTY__c</fullName>
    <label>Requested QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>