force-app/main/default/objects/Order__c/fields/Ship_To_Site_Name__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Site_Name__c</fullName>
    <formula>Customer__r.Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ship To Site Name</label>
    <type>Text</type>
</CustomField>