force-app/main/default/objects/Order__c/fields/Shipped_To_City__c.field-meta.xml
<CustomField>
    <fullName>Shipped_To_City__c</fullName>
    <formula>Customer__r.City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipped To City</label>
    <type>Text</type>
</CustomField>