force-app/main/default/objects/Order__c/fields/Shipped_to_State__c.field-meta.xml
<CustomField>
    <fullName>Shipped_to_State__c</fullName>
    <label>Shipped to State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State</valueSetName>
    </valueSet>
</CustomField>