force-app/main/default/objects/Order__c/fields/Source_Plant__c.field-meta.xml
<CustomField>
    <fullName>Source_Plant__c</fullName>
    <label>Source Plant</label>
    <length>18</length>
    <type>Text</type>
</CustomField>