force-app/main/default/objects/Order__c/fields/Total_QTY__c.field-meta.xml
<CustomField>
    <fullName>Total_QTY__c</fullName>
    <label>Total QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>