force-app/main/default/objects/Order__c/fields/Vendor_SLA__c.field-meta.xml
<CustomField>
    <fullName>Vendor_SLA__c</fullName>
    <label>Vendor SLA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>