force-app/main/default/objects/Order__c/fields/Way_Bill__c.field-meta.xml
<CustomField>
    <fullName>Way_Bill__c</fullName>
    <label>Way Bill</label>
    <length>255</length>
    <type>Text</type>
</CustomField>