force-app/main/default/objects/Order__c/recordTypes/Demand_Order.recordType-meta.xml
<RecordType>
    <fullName>Demand_Order</fullName>
    <active>true</active>
    <label>Demand Order</label>
</RecordType>