force-app/main/default/objects/Order__c/recordTypes/Supply_Order.recordType-meta.xml
<RecordType>
    <fullName>Supply_Order</fullName>
    <active>true</active>
    <label>Supply Order</label>
</RecordType>