force-app/main/default/objects/Order__c/listViews/ALL_Orders.listView-meta.xml
<ListView>
    <fullName>ALL_Orders</fullName>
    <columns>NAME</columns>
    <columns>Item__c</columns>
    <columns>Site__c</columns>
    <columns>Closed_Date__c</columns>
    <columns>Case_Number__c</columns>
    <columns>Closure_Code__c</columns>
    <columns>Customer__c</columns>
    <columns>External_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>ALL Orders</label>
</ListView>